# lol-champion-simulation

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  aa_test_output.txt  custom_runes_report.html  custom_runes_report_new.txt  darius_test.txt  ezreal_test.txt  garen_2items.txt  garen_active_item_test.txt  garen_test.txt  garen_timing_test.txt  no_items_output.txt  opgg_test.html  out2.txt  out3.txt  pta_test3.apl  pvp_test.txt  report.html  stdout.txt  test.html  test_aa.apl  test_aa_no_items.apl  test_api.py  test_apl.txt  test_darius_apl.txt  test_garen_phase_rush.rs  test_parse.py  test_parse2.py  test_parse3.py  test_pvp_apl_darius.txt  test_pvp_apl_garen.txt  test_runes.apl  todo.md
.agents/: ORIGINAL_REQUEST.md
.agents/auditor_m6_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m6_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m6_1_replace/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m6_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/implementer_test_infra/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/implementer_tier1_tests/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/orchestrator/: README.md  (+4 more)
crates/lol-core/: Cargo.toml
crates/lol-core/src/: ability.rs  buff.rs  champion.rs  cooldown.rs  damage.rs  event.rs  item.rs  lib.rs  resource.rs  rune.rs  rune_manager.rs  sim.rs  stats.rs  types.rs
crates/lol-data/: Cargo.toml
crates/lol-data/src/: champion_data.rs  item_data.rs  lib.rs  loader.rs  rune_data.rs  scraper.rs
data/: garen_stride_phase_apl.txt  items.json  runes.json
playwright-test/: package-lock.json  package.json  verify.js  verify_stats_panel.js
src/: main.rs
tests/: challenger_empirical.rs  challenger_passive_items.rs  new_features_integration.rs  regen_stress_tests.rs  tier1_feature.rs  tier2_boundary.rs  tier3_combo.rs  tier4_realworld.rs
(+143 files in other folders)
