[package]
name = "lol-core"
version = "0.1.0"
edition = "2024"
description = "Core simulation engine: events, stats, damage pipeline, buffs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
ordered-float = { version = "4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
