[package]
name = "lol-data"
version = "0.1.0"
edition = "2024"
description = "Game data loading and management (champions, items, runes)"

[dependencies]
lol-core = { path = "../lol-core" }
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
