[package]
name = "lol-data"
version = "0.1.0"
edition = "2024"
description = "Game data loading and management (champions, items, runes)"

[dependencies]
lol-core = { path = "../lol-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
